--- a/src/main/webapp/WEB-INF/views/dynamic/navigationMain.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/navigationMain.jspf
@@ -1,7 +1,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.jsp">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href='<c:url value="/"/>'>
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
@@ -13,14 +13,14 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href='<c:url value="/"/>'>
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Home</span></a>
     </li>
 
     <!-- Nav Item - Kursanci -->
     <li class="nav-item">
-        <a class="nav-link" href='#'>
+        <a class="nav-link" href='<c:url value="/students"/>'>
             <i class="fas fa-users"></i>
             <span>Kursanci</span></a>
     </li>
@@ -35,7 +35,7 @@
 
     <!-- Nav Item - Tasks -->
     <li class="nav-item">
-        <a class="nav-link" href='#'>
+        <a class="nav-link" href='<c:url value="/tasks"/>'>
             <i class="fas fa-clipboard-list"></i>
             <span>Taski</span></a>
     </li>
